--- a/index.html
+++ b/index.html
@@ -123,7 +123,8 @@
 
   <div class="article-body">
 
-    <p class="lead"><a href="https://www.morongocasinoresort.com/" target="_blank" rel="noopener">Morongo Casino Resort &amp; Spa</a> doesn&rsquo;t make decisions lightly. A leader in the California gaming industry, the Four Diamond resort employs more than 2,500 team members and welcomes more than 10,000 guests every day from its highly visible location just off Interstate 10 in Cabazon, California. With more than 3,000 slot machines, 84 table games, multiple dining and entertainment venues, and a regular program featuring well-known artists, Morongo has built one of the most recognized resort brands in the state &mdash; and the standard for any partnership reflects that.</p>
+    <p class="lead"><a href="https://www.morongocasinoresort.com/" target="_blank" rel="noopener">Morongo Casino Resort &amp; Spa</a> doesn&rsquo;t make decisions lightly. A leader in the California gaming industry, the Four Diamond resort employs more than 2,500 team members and welcomes more than 10,000 guests every day from its highly visible location just off Interstate 10 in Cabazon, California. With more than 3,000 slot machines, 84 table games, multiple dining and entertainment venues, and a regular program featuring well-known artists, Morongo has built one of the most recognized resort brands in the state. This is a standard that extends to any partnerships they decide to undertake.
+</p>
 
     <p>So when their team began exploring factory-built housing as part of a forward-looking hospitality initiative, they approached it methodically, with high expectations, and no shortcuts. They travelled across the country consulting with a wide range of manufacturers to determine who could best meet their requirements. At the end of that process, they chose Nestron.</p>
 
@@ -171,7 +172,7 @@
 
     <!-- Tom Roger pull quote -->
     <blockquote class="pull-quote">
-      <p>&ldquo;You can look at it online all you want &mdash; but when you have it here on property and you can actually step in, feel it, see it. It&rsquo;s a completely different experience.&rdquo;</p>
+      <p>&ldquo;You can look at it online all you want, but when you have it here on property and you can actually step in, feel it, see it. It&rsquo;s a completely different experience.&rdquo;</p>
       <cite>Tom Roger &nbsp;&middot;&nbsp; Hotel Director, Morongo Casino Resort &amp; Spa</cite>
     </blockquote>
     <div class="quote-spacer"></div>
@@ -186,9 +187,9 @@
 
     <p>Communication was the other factor Morongo consistently pointed to. Pleva noted that Nestron&rsquo;s responsiveness throughout the process built confidence in a way that product specs alone couldn&rsquo;t. &ldquo;They always got back to us, answered our questions in a timely manner,&rdquo; Roger added. &ldquo;You could just tell it was a good partnership.&rdquo;</p>
 
-    <p>That relationship carried through to the practical realities of coordinating a multi-unit installation. Shipping, site preparation, and placement at that scale requires the kind of follow-through that either happens or it doesn&rsquo;t. In Morongo&rsquo;s case, it did.</p>
+    <p>That relationship carried through to the practical realities of coordinating a multi-unit installation. Shipping, site preparation, and installation at that scale requires committed follow-through and regular feedback from both parties.</p>
 
-    <p>The Southern California desert is not a gentle environment. Sustained heat, intense sun, dry conditions year-round. The units&rsquo; continued condition in that climate reflects what the manufacturing process actually produces, rather than what a rendering promises.</p>
+    <p>The Southern California desert is not a gentle environment. Sustained heat, intense sun, dry conditions year-round. Any company can spin up a rendering of a beautiful ADU, but it requires real manufacturing know-how to construct a home that can hold up in any conditions. As any visitor will attest, the units&rsquo continued excellent condition in that climate speaks for itself.</p>
 
     <!-- Craig Pleva "amazed" pull quote -->
     <blockquote class="pull-quote">
@@ -197,7 +198,7 @@
     </blockquote>
     <div class="quote-spacer"></div>
 
-    <p>For prospective buyers, the Morongo location offers something genuinely uncommon in this market: a finished, furnished, fully powered unit available to tour by appointment, nearly any day of the week.</p>
+    <p>For prospective buyers, the Morongo location offers something genuinely uncommon in this market: a finished, furnished, fully powered unit available to tour by appointment, any day of the week.</p>
 
     <p>Nine Legend Two units are currently available at the <a href="https://nestron.house/nestron-x-morongo-dealership/" target="_blank" rel="noopener">Morongo location</a>, in a mix of one- and two-bedroom configurations. For buyers working toward a delivery date, these units are already built, already in the country, and ready for installation once they reach your property.</p>
 
